; ModuleID = '/home/carl/AnghaBench/git/extr_diff.c_diff_opt_anchored.c'
source_filename = "/home/carl/AnghaBench/git/extr_diff.c_diff_opt_anchored.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.option = type { %struct.diff_options* }
%struct.diff_options = type { i64, i32*, i32, i32 }

@PATIENCE_DIFF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.option*, i8*, i32)* @diff_opt_anchored to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @diff_opt_anchored(%struct.option* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.option*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.diff_options*, align 8
  store %struct.option* %0, %struct.option** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.option*, %struct.option** %4, align 8
  %9 = getelementptr inbounds %struct.option, %struct.option* %8, i32 0, i32 0
  %10 = load %struct.diff_options*, %struct.diff_options** %9, align 8
  store %struct.diff_options* %10, %struct.diff_options** %7, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @BUG_ON_OPT_NEG(i32 %11)
  %13 = load %struct.diff_options*, %struct.diff_options** %7, align 8
  %14 = load i32, i32* @PATIENCE_DIFF, align 4
  %15 = call i32 @DIFF_WITH_ALG(%struct.diff_options* %13, i32 %14)
  %16 = load %struct.diff_options*, %struct.diff_options** %7, align 8
  %17 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %16, i32 0, i32 3
  store i32 %15, i32* %17, align 4
  %18 = load %struct.diff_options*, %struct.diff_options** %7, align 8
  %19 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %18, i32 0, i32 1
  %20 = load i32*, i32** %19, align 8
  %21 = load %struct.diff_options*, %struct.diff_options** %7, align 8
  %22 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = add nsw i64 %23, 1
  %25 = load %struct.diff_options*, %struct.diff_options** %7, align 8
  %26 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 8
  %28 = call i32 @ALLOC_GROW(i32* %20, i64 %24, i32 %27)
  %29 = load i8*, i8** %5, align 8
  %30 = call i32 @xstrdup(i8* %29)
  %31 = load %struct.diff_options*, %struct.diff_options** %7, align 8
  %32 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %31, i32 0, i32 1
  %33 = load i32*, i32** %32, align 8
  %34 = load %struct.diff_options*, %struct.diff_options** %7, align 8
  %35 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = add nsw i64 %36, 1
  store i64 %37, i64* %35, align 8
  %38 = getelementptr inbounds i32, i32* %33, i64 %36
  store i32 %30, i32* %38, align 4
  ret i32 0
}

declare dso_local i32 @BUG_ON_OPT_NEG(i32) #1

declare dso_local i32 @DIFF_WITH_ALG(%struct.diff_options*, i32) #1

declare dso_local i32 @ALLOC_GROW(i32*, i64, i32) #1

declare dso_local i32 @xstrdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
